# oop-bank-account

./: pyproject.toml
.github/workflows/: ci.yml
src/oop_bank_account/: __init__.py  account.py
tests/: .coverage  test_account.py
