[project]
name = "oop-bank-account"
version = "0.1.0"
description = "CI/CD practise"
authors = [
    {name = "underoos14",email = "varnik45@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "oop_bank_account", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=oop_bank_account --cov-fail-under=80"

[tool.pylint]
disable = ["missing-module-docstring"]